# searchsorted

./: .gitignore  benchmarks.py  builddevimages.sh  example.py  export_custom_op.py  export_model.py  setup.py  workflow.md
cpu/: searchsorted_cpu_wrapper.cpp
cuda/: searchsorted_cuda_kernel.cu  searchsorted_cuda_kernel.h  searchsorted_cuda_wrapper.cpp  searchsorted_cuda_wrapper.h
custom_op_library/cmake/: Findonnxruntime.cmake
docker/: Dockerfile.cuda  Dockerfile.onnxdev  Dockerfile.onnxext  Dockerfile.onnxruntime  Dockerfile.vcpkg
ort_custom_op/: CMakeLists.txt  ort_searchsorted_op.cpp  ort_searchsorted_op.cu  ort_searchsorted_op.h  registration.cpp  registration.h  testsearchsorted.cpp
ort_test_model/: CMakeLists.txt  main.cpp
ort_test_model/cmake/: Findonnxruntime.cmake
src/: setup.py
src/cpu/: searchsorted_cpu_wrapper.cpp
src/cuda/: searchsorted_cuda_kernel.cu  searchsorted_cuda_wrapper.cpp  searchsorted_cuda_wrapper.h
src/searchsorted/: searchsorted.py  utils.py
tests/: test_custom_op.py
torch/: export_custom_op.py  setup.py
torch/cpu/: searchsorted_cpu_wrapper.cpp
torch/cuda/: searchsorted_cuda_kernel.cu  searchsorted_cuda_kernel.h  searchsorted_cuda_torch.cu  searchsorted_cuda_torch.h  searchsorted_cuda_wrapper.h
